# mnema

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  NOHA.md  README.md  deny.toml  install.ps1  install.sh  noha.yaml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  installer-test.yml  publish.yml  release.yml  security-audit.yml
.noha/: INTEGRITY_PROMPT.md  baseline.tsv
.sota/: last-scan.json  rubric.local-first-agent-memory.json
benches/: engram.rs  locomo.rs  locomo_qa.rs  locomo_sweep.rs  mnema.rs  persist.rs  recall.rs  scale.rs
docs/: DESIGN.md  NARRATIVE.md  README.md
docs/adr/: 0020-engram-dependency-budget.md  0020-mnema-dependency-budget.md  0021-engram-egress-tier.md  0021-mnema-egress-tier.md  0022-memory-augmented-self-evolution.md  0023-embedder-width-single-source.md  0024-whole-store-seal-persistence.md  0025-mcp-server.md
examples/: memory_demo.rs  semantic_embed.rs
mnema-core/: Cargo.toml  noha.yaml
mnema-core/src/: embed.rs  lib.rs  retrieval.rs  semantic.rs  vector.rs  working.rs
mnema-core/tests/: no_io.rs
mnema-core/tests/common/: mod.rs
scripts/: fitness-engram.sh  fitness-mnema.sh  locomo.sh  locomo_baselines.py  locomo_sweep.sh
src/: embed.rs  facade.rs  http_embed.rs  keyfile.rs  lib.rs  model_embed.rs  retrieval.rs  semantic.rs  store.rs  vector.rs  working.rs
tests/: architecture.rs  cli.rs  keyfile_env.rs  server.rs
