[package]
name = "mnema"
version = "0.1.0"
edition = "2024"
description = "A fast, secure, local-first memory layer for LLMs — four memory types, contradiction-resolving writes, injection-resistant retrieval, encrypted at rest."
license = "MIT OR Apache-2.0"
keywords = ["memory", "llm", "ai", "vector", "local-first"]
categories = ["data-structures", "database-implementations"]

[dependencies]
# The `secure` feature (encryption at rest for the episodic store + the Mnema facade):
# a small, vetted, safe-Rust crypto set — OPTIONAL, so the core (retrieval, semantic,
# working, vector, egress) stays zero-dependency by default. See docs/adr/0020.
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
getrandom = { version = "0.2", optional = true }

# The `local-embed` feature (a real in-process semantic embedder): sentence-transformers
# all-MiniLM-L6-v2 run via candle (pure Rust — no Python, no ONNX C++ runtime). OPT-IN and
# heavyweight by design, so the zero-dependency core stays untouched; only enable it when you
# want semantic recall out of the box instead of bringing your own `Embedder`.
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", optional = true }
serde_json = { version = "1", optional = true }

[features]
# `secure` = encryption at rest (Argon2id + XChaCha20-Poly1305) for the episodic store
# and the whole-`Mnema` seal/open, plus the `Mnema` facade, the `mnema` CLI, and the
# memory_demo example.
secure = ["dep:chacha20poly1305", "dep:argon2", "dep:getrandom"]

# `local-embed` = a bundled real semantic embedder (all-MiniLM-L6-v2 via candle). Weights are
# downloaded + cached from Hugging Face on first use. See `src/model_embed.rs`.
local-embed = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
    "dep:serde_json",
]

# The `mnema` CLI (remember/recall/fact/stats over an encrypted store) — needs the
# encrypted facade, hence the `secure` feature.
[[bin]]
name = "mnema"
path = "src/bin/mnema.rs"
required-features = ["secure"]

# A live, self-verifying tour of the memory layer.
[[example]]
name = "memory_demo"
required-features = ["secure"]

# Proof the bundled semantic embedder captures meaning (downloads all-MiniLM-L6-v2).
[[example]]
name = "semantic_embed"
required-features = ["local-embed"]

# Channel-B style bench: exact vs approximate (IVF) vector recall — latency + recall.
[[bench]]
name = "mnema"
harness = false

# On-demand scale sweep: how exact vs IVF latency and recall move as the corpus grows.
# Not part of the fitness signal (it is slow); run explicitly with `cargo bench --bench scale`.
[[bench]]
name = "scale"
harness = false

# Recall-quality R@k: lexical vs semantic+weighted retrieval over paraphrase queries.
# Run with `cargo bench --bench recall --features secure,local-embed`.
[[bench]]
name = "recall"
harness = false

# Persistence cost: whole-store seal() latency vs N (see ADR-0024).
# Run with `cargo bench --bench persist --features secure`.
[[bench]]
name = "persist"
harness = false

# Public recall benchmark: retrieval R@k on the LoCoMo long-conversation dataset.
# Download data/locomo10.json from github.com/snap-research/locomo, set LOCOMO_PATH, then:
#   LOCOMO_PATH=locomo10.json cargo bench --bench locomo --features secure,local-embed
[[bench]]
name = "locomo"
harness = false

[dev-dependencies]
# Parse the LoCoMo dataset JSON in the locomo bench (dev-only; not a crate dependency).
serde_json = "1"
