[package]
name = "mnema-core"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/MerlijnW70/mnema"
description = "Zero-dependency core of mnema: the egress-filter privacy invariant, the memory model, and pure-logic retrieval/semantic/vector/working stores."
license = "MIT OR Apache-2.0"
keywords = ["memory", "agent", "llm", "local-first", "zero-dependency"]
categories = ["data-structures"]

# The whole point of this crate: it is a strictly zero-dependency, unsafe-free Rust leaf. `internal-tool gate`
# certifies exactly that on every run — no `[dependencies]` may ever appear here. Anything that needs a
# dependency (encryption, embeddings, JSON) lives in the umbrella `mnema` crate, one layer up.
[dependencies]
